--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "node": ">=6.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "5.8.1",
+    "@fullcalendar/bootstrap": "4.0.1",
+    "@fullcalendar/core": "4.0.1",
+    "@fullcalendar/daygrid": "4.0.1",
     "CoolBeans": "0.0.9",
-    "@fortawesome/fontawesome-free": "5.7.2",
-    "@fullcalendar/bootstrap": "4.0.0-beta.4",
-    "@fullcalendar/core": "4.0.0-beta.4",
-    "@fullcalendar/daygrid": "4.0.0-beta.4",
     "async": "2.6.2",
     "awesome-bootstrap-checkbox": "1.0.1",
     "body-parser": "1.18.3",
@@ -35,7 +35,7 @@
     "bootstrap-colorpicker": "3.0.3",
     "bootstrap-datepicker": "1.8.0",
     "bootstrap-markdown": "2.10.0",
-    "compression": "1.7.3",
+    "compression": "1.7.4",
     "connect-ensure-login": "0.1.1",
     "connect-mongo": "2.0.3",
     "cookie-parser": "1.4.4",
@@ -50,7 +50,7 @@
     "glob": "7.1.3",
     "guillotine": "1.3.1",
     "i18next": "15.0.7",
-    "i18next-express-middleware": "1.7.1",
+    "i18next-express-middleware": "1.7.3",
     "i18next-intervalplural-postprocessor": "1.0.2",
     "i18next-node-fs-backend": "2.1.1",
     "icalendar": "0.7.1",
@@ -61,12 +61,12 @@
     "jqcloud2": "2.0.3",
     "jquery": "3.3.1",
     "jquery-validation": "1.19.0",
-    "jsonwebtoken": "8.5.0",
+    "jsonwebtoken": "8.5.1",
     "leaflet": "1.4.0",
-    "luxon": "1.11.4",
+    "luxon": "1.12.0",
     "marked": "0.6.1",
     "mime-types": "2.1.22",
-    "mongodb": "3.1.13",
+    "mongodb": "3.2.1",
     "morgan": "1.9.1",
     "multiparty": "4.2.1",
     "node-cache": "4.2.0",
@@ -107,7 +107,7 @@
     "grunt-contrib-cssmin": "3.0.0",
     "grunt-contrib-pug": "2.0.0",
     "grunt-contrib-sassjs": "0.1.8",
-    "grunt-contrib-uglify": "4.0.0",
+    "grunt-contrib-uglify": "4.0.1",
     "grunt-eslint": "21.0.0",
     "grunt-karma": "3.0.1",
     "grunt-mocha-istanbul": "5.0.2",
@@ -126,7 +126,7 @@
     "must-dist": "0.12.0",
     "proxyquire": "2.1.0",
     "puppeteer": "1.13.0",
-    "sinon": "7.2.7",
+    "sinon": "7.3.0",
     "supertest": "4.0.2"
   },
   "scripts": {
