--- a/package.json
+++ b/package.json
@@ -23,68 +23,68 @@
     "node": ">=6.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.8.1",
-    "@fullcalendar/bootstrap": "4.0.1",
-    "@fullcalendar/core": "4.0.1",
-    "@fullcalendar/daygrid": "4.0.1",
+    "@fortawesome/fontawesome-free": "5.8.2",
+    "@fullcalendar/bootstrap": "4.1.0",
+    "@fullcalendar/core": "4.1.0",
+    "@fullcalendar/daygrid": "4.1.0",
     "CoolBeans": "0.0.9",
     "async": "2.6.2",
     "awesome-bootstrap-checkbox": "1.0.1",
-    "body-parser": "1.18.3",
+    "body-parser": "1.19.0",
     "bootstrap": "4.3.1",
-    "bootstrap-colorpicker": "3.0.3",
+    "bootstrap-colorpicker": "3.1.2",
     "bootstrap-datepicker": "1.8.0",
     "bootstrap-markdown": "2.10.0",
     "compression": "1.7.4",
     "connect-ensure-login": "0.1.1",
     "connect-mongo": "2.0.3",
     "cookie-parser": "1.4.4",
-    "csurf": "1.9.0",
+    "csurf": "1.10.0",
     "datatables.net": "1.10.19",
     "datatables.net-bs4": "1.10.19",
-    "express": "4.16.4",
-    "express-session": "1.15.6",
+    "express": "4.17.0",
+    "express-session": "1.16.1",
     "ezmlm-node": "2.0.0",
     "feed": "2.0.4",
-    "full-icu": "1.2.1",
-    "glob": "7.1.3",
+    "full-icu": "1.3.0",
+    "glob": "7.1.4",
     "guillotine": "1.3.1",
-    "i18next": "15.0.7",
-    "i18next-express-middleware": "1.7.3",
+    "i18next": "15.1.1",
+    "i18next-express-middleware": "1.8.0",
     "i18next-intervalplural-postprocessor": "1.0.2",
-    "i18next-node-fs-backend": "2.1.1",
+    "i18next-node-fs-backend": "2.1.3",
     "icalendar": "0.7.1",
     "iconv-lite": "0.4.24",
     "imagemagick": "0.1.3",
     "intl": "1.2.5",
-    "intl-locales-supported": "1.0.0",
+    "intl-locales-supported": "1.0.1",
     "jqcloud2": "2.0.3",
-    "jquery": "3.3.1",
+    "jquery": "3.4.1",
     "jquery-validation": "1.19.0",
     "jsonwebtoken": "8.5.1",
-    "leaflet": "1.4.0",
-    "luxon": "1.12.0",
-    "marked": "0.6.1",
-    "mime-types": "2.1.22",
-    "mongodb": "3.2.1",
+    "leaflet": "1.5.1",
+    "luxon": "1.14.0",
+    "marked": "0.6.2",
+    "mime-types": "2.1.24",
+    "mongodb": "3.2.5",
     "morgan": "1.9.1",
     "multiparty": "4.2.1",
     "node-cache": "4.2.0",
     "node-html-encoder": "0.0.2",
     "node-syntaxhighlighter": "0.8.1",
-    "nodemailer": "5.1.1",
+    "nodemailer": "6.1.1",
     "openidconnect-for-passport": "0.0.3",
     "passport": "0.4.0",
     "passport-github": "1.1.0",
     "passport-local": "1.0.0",
     "passport-openid": "0.4.0",
     "passport-strategy": "1.0.0",
-    "popper.js": "1.14.7",
+    "popper.js": "1.15.0",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
     "ramda": "0.26.1",
     "request": "2.88.0",
-    "select2": "4.0.5",
+    "select2": "4.0.7",
     "select2-theme-bootstrap4": "0.2.0-beta.3",
     "serve-favicon": "2.5.0",
     "simple-configure": "0.1.6",
@@ -100,7 +100,7 @@
   "devDependencies": {
     "ajv": "6.10.0",
     "chado": "0.3.1",
-    "grunt": "1.0.3",
+    "grunt": "1.0.4",
     "grunt-cli": "1.3.2",
     "grunt-contrib-clean": "2.0.0",
     "grunt-contrib-copy": "1.0.0",
@@ -109,12 +109,12 @@
     "grunt-contrib-sassjs": "0.1.8",
     "grunt-contrib-uglify": "4.0.1",
     "grunt-eslint": "21.0.0",
-    "grunt-karma": "3.0.1",
+    "grunt-karma": "3.0.2",
     "grunt-mocha-istanbul": "5.0.2",
     "grunt-patcher": "1.0.0",
     "grunt-puglint": "1.0.0",
     "istanbul": "0.4.5",
-    "karma": "^4.0.1",
+    "karma": "4.1.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.2",
     "karma-html2js-preprocessor": "1.1.0",
@@ -122,11 +122,11 @@
     "karma-mocha": "1.3.0",
     "karma-must": "0.1.1",
     "karma-sinon": "1.0.5",
-    "mocha": "6.0.2",
+    "mocha": "6.1.4",
     "must-dist": "0.12.0",
     "proxyquire": "2.1.0",
-    "puppeteer": "1.13.0",
-    "sinon": "7.3.0",
+    "puppeteer": "1.16.0",
+    "sinon": "7.3.2",
     "supertest": "4.0.2"
   },
   "scripts": {
