--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "csurf": "1.11.0",
     "datatables.net": "1.10.23",
     "datatables.net-bs4": "1.10.23",
+    "exifr": "6.0.0",
     "express": "4.17.1",
     "express-session": "1.17.1",
     "feed": "4.2.1",
@@ -52,7 +53,6 @@
     "i18next-node-fs-backend": "2.1.3",
     "icalendar": "0.7.1",
     "iconv-lite": "0.6.2",
-    "imagemagick": "0.1.3",
     "jqcloud2": "2.0.3",
     "jquery": "3.5.1",
     "jquery-validation": "1.19.2",
@@ -82,6 +82,7 @@
     "serve-favicon": "2.5.0",
     "simple-configure": "0.1.6",
     "simple-timepicker": "1.1.1",
+    "sharp": "0.26.3",
     "smartmenus": "1.1.1",
     "tinycolor2": "1.4.2",
     "tinygradient": "1.1.2",
