--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "fullcalendar": "5.8.0",
     "glob": "7.1.7",
     "guillotine": "1.3.1",
-    "i18next": "20.3.2",
+    "i18next": "20.3.3",
     "i18next-express-middleware": "2.0.0",
     "i18next-intervalplural-postprocessor": "3.0.0",
     "i18next-node-fs-backend": "2.1.3",
@@ -66,7 +66,7 @@
     "morgan": "1.10.0",
     "multiparty": "4.2.2",
     "node-syntaxhighlighter": "0.8.1",
-    "nodemailer": "6.6.2",
+    "nodemailer": "6.6.3",
     "openidconnect-for-passport": "0.0.3",
     "passport": "0.4.1",
     "passport-github": "1.1.0",
@@ -78,7 +78,7 @@
     "qr-image": "3.2.0",
     "ramda": "0.27.1",
     "request": "2.88.2",
-    "select2": "4.0.13",
+    "select2": "4.1.0-rc.0",
     "select2-bootstrap-5-theme": "1.1.1",
     "serve-favicon": "2.5.0",
     "sharp": "0.28.3",
@@ -93,7 +93,7 @@
     "winston-config": "0.5.1"
   },
   "devDependencies": {
-    "ajv": "8.6.0",
+    "ajv": "8.6.2",
     "grunt": "1.4.1",
     "grunt-cli": "1.4.3",
     "grunt-contrib-clean": "2.0.0",
