--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "async": "3.2.1",
     "awesome-bootstrap-checkbox": "1.0.1",
     "body-parser": "1.19.0",
-    "bootstrap": "5.0.2",
+    "bootstrap": "5.1.1",
     "bootstrap-colorpicker": "3.4.0",
     "bootstrap-datepicker": "1.9.0",
     "bootstrap-markdown": "2.10.0",
@@ -100,13 +100,13 @@
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-cssmin": "4.0.0",
     "grunt-contrib-pug": "3.0.0",
-    "grunt-contrib-sassjs": "0.1.8",
     "grunt-contrib-uglify": "5.0.1",
     "grunt-eslint": "23.0.0",
     "grunt-karma": "4.0.2",
     "grunt-mocha-cli": "7.0.0",
     "grunt-patcher": "1.0.0",
     "grunt-puglint": "1.0.0",
+    "grunt-sass": "3.1.0",
     "grunt-simple-nyc": "3.0.1",
     "karma": "6.3.4",
     "karma-chrome-launcher": "3.1.0",
@@ -120,6 +120,7 @@
     "must-dist": "0.12.0",
     "proxyquire": "2.1.3",
     "puppeteer": "10.2.0",
+    "sass": "1.39.2",
     "sinon": "11.1.2",
     "supertest": "6.1.6"
   },
