--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "fullcalendar": "5.10.0",
     "glob": "7.2.0",
     "guillotine": "1.3.1",
-    "i18next": "20.6.1",
-    "i18next-express-middleware": "2.0.0",
+    "i18next": "21.3.2",
+    "i18next-http-middleware": "3.1.4",
     "i18next-intervalplural-postprocessor": "3.0.0",
     "i18next-node-fs-backend": "2.1.3",
     "icalendar": "0.7.1",
@@ -101,7 +101,7 @@
     "grunt-contrib-cssmin": "4.0.0",
     "grunt-contrib-pug": "3.0.0",
     "grunt-contrib-uglify": "5.0.1",
-    "grunt-eslint": "24.0.0",
+    "grunt-eslint": "23.0.0",
     "grunt-karma": "4.0.2",
     "grunt-mocha-cli": "7.0.0",
     "grunt-patcher": "1.0.0",
