--- a/.github/workflows/agora-ci.yml
+++ b/.github/workflows/agora-ci.yml
@@ -9,6 +9,12 @@ jobs:
       matrix:
         node-version: [12.x]
 
+    services:
+      mongodb:
+        image: mongo
+        ports:
+          - 27017:27017
+
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
