--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
     "datatables.net": "1.11.5",
     "datatables.net-bs5": "1.11.5",
     "exifr": "7.1.3",
-    "express": "4.17.3",
+    "express": "4.18.1",
     "express-session": "1.17.2",
     "feed": "4.2.2",
     "full-icu": "1.4.0",
     "fullcalendar": "5.11.0",
     "glob": "8.0.1",
     "guillotine": "1.3.1",
-    "i18next": "21.6.16",
+    "i18next": "21.7.1",
     "i18next-http-middleware": "3.2.0",
     "i18next-intervalplural-postprocessor": "3.0.0",
     "i18next-node-fs-backend": "2.1.3",
@@ -57,15 +57,15 @@
     "jquery": "3.6.0",
     "jquery-validation": "1.19.3",
     "jsonwebtoken": "8.5.1",
-    "leaflet": "1.7.1",
-    "luxon": "2.3.1",
-    "marked": "4.0.14",
+    "leaflet": "1.8.0",
+    "luxon": "2.3.2",
+    "marked": "4.0.15",
     "mime-types": "2.1.35",
     "mongodb": "4.5.0",
     "morgan": "1.10.0",
     "multiparty": "4.2.3",
     "node-syntaxhighlighter": "0.8.1",
-    "nodemailer": "6.7.3",
+    "nodemailer": "6.7.5",
     "openidconnect-for-passport": "0.0.3",
     "passport": "0.5.2",
     "passport-github": "1.1.0",
@@ -78,9 +78,9 @@
     "ramda": "0.28.0",
     "request": "2.88.2",
     "select2": "4.1.0-rc.0",
-    "select2-bootstrap-5-theme": "1.2.0",
+    "select2-bootstrap-5-theme": "1.3.0",
     "serve-favicon": "2.5.0",
-    "sharp": "0.30.3",
+    "sharp": "0.30.4",
     "simple-configure": "0.1.6",
     "simple-timepicker": "1.1.1",
     "smartmenus": "1.1.1",
@@ -92,13 +92,15 @@
   },
   "devDependencies": {
     "ajv": "8.11.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.0.0",
     "grunt": "1.5.2",
     "grunt-cli": "1.4.3",
-    "grunt-contrib-clean": "2.0.0",
+    "grunt-contrib-clean": "2.0.1",
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-cssmin": "4.0.0",
     "grunt-contrib-pug": "3.0.0",
-    "grunt-contrib-uglify": "5.1.0",
+    "grunt-contrib-uglify": "5.2.1",
     "grunt-eslint": "24.0.0",
     "grunt-karma": "4.0.2",
     "grunt-mocha-cli": "7.0.0",
@@ -106,7 +108,7 @@
     "grunt-puglint": "1.0.0",
     "grunt-sass": "3.1.0",
     "grunt-simple-nyc": "3.0.1",
-    "karma": "6.3.18",
+    "karma": "6.3.19",
     "karma-chrome-launcher": "3.1.1",
     "karma-coverage": "2.2.0",
     "karma-html2js-preprocessor": "1.1.0",
@@ -114,13 +116,14 @@
     "karma-mocha": "2.0.1",
     "karma-must": "0.1.1",
     "karma-sinon": "1.0.5",
-    "mocha": "9.2.2",
+    "mocha": "10.0.0",
     "must-dist": "0.12.0",
+    "prettier": "2.6.2",
     "proxyquire": "2.1.3",
-    "puppeteer": "13.5.2",
-    "sass": "1.50.0",
-    "sinon": "13.0.2",
-    "supertest": "6.2.2"
+    "puppeteer": "13.7.0",
+    "sass": "1.51.0",
+    "sinon": "14.0.0",
+    "supertest": "6.2.3"
   },
   "scripts": {
     "start": "node --icu-data-dir=node_modules/full-icu start-softwerkskammer",
