--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "datatables.net-bs5": "1.11.5",
     "exifr": "7.1.3",
     "express": "4.18.1",
+    "express-async-errors": "3.1.1",
     "express-session": "1.17.2",
     "feed": "4.2.2",
     "full-icu": "1.4.0",
