--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "pug": "3.0.2",
     "qr-image": "3.2.0",
     "ramda": "0.28.0",
-    "request": "2.88.2",
     "select2": "4.1.0-rc.0",
     "select2-bootstrap-5-theme": "1.3.0",
     "serve-favicon": "2.5.0",
@@ -74,6 +73,7 @@
     "simple-configure": "0.1.6",
     "simple-timepicker": "1.1.1",
     "smartmenus": "1.1.1",
+    "superagent": "7.1.3",
     "tinycolor2": "1.4.2",
     "tinygradient": "1.1.5",
     "useragent": "2.3.0",
