--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node": ">=16.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "6.5.1",
+    "@fortawesome/fontawesome-free": "6.5.2",
     "@fullcalendar/core": "6.1.11",
     "@fullcalendar/luxon3": "6.1.11",
     "@popperjs/core": "2.11.8",
@@ -40,9 +40,9 @@
     "glob": "7.2.0",
     "guillotine": "1.3.1",
     "i18next": "23.10.1",
+    "i18next-fs-backend": "2.3.1",
     "i18next-http-middleware": "3.5.0",
     "i18next-intervalplural-postprocessor": "3.0.0",
-    "i18next-node-fs-backend": "2.1.3",
     "icalendar": "0.7.1",
     "iconv-lite": "0.6.3",
     "jqcloud2": "2.0.3",
@@ -82,7 +82,7 @@
   },
   "devDependencies": {
     "ajv": "8.12.0",
-    "eslint": "8.57.0",
+    "eslint": "9.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "grunt": "1.6.1",
@@ -111,8 +111,8 @@
     "must-dist": "0.12.0",
     "prettier": "3.2.5",
     "proxyquire": "2.1.3",
-    "puppeteer": "22.6.1",
-    "sass": "1.72.0",
+    "puppeteer": "22.6.3",
+    "sass": "1.74.1",
     "sinon": "17.0.1",
     "supertest": "6.3.4"
   },
