--- a/.github/workflows/agora-ci.yml
+++ b/.github/workflows/agora-ci.yml
@@ -10,19 +10,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    services:
-      mongodb:
-        image: mongo
-        ports:
-          - 27017:27017
-
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js v18
         uses: actions/setup-node@v4
         with:
-          node-version: '18.x'
-          cache: "yarn"
+          node-version: 18.x
+          cache: yarn
       - run: yarn install --immutable
       - run: yarn test
