--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "select2": "4.1.0-rc.0",
     "select2-bootstrap-5-theme": "1.3.0",
     "serve-favicon": "2.5.0",
-    "sharp": "0.32.6",
+    "sharp": "0.33.4",
     "simple-configure": "0.1.6",
     "simple-timepicker": "1.1.1",
     "superagent": "9.0.2",
@@ -117,8 +117,7 @@
     "supertest": "7.0.0"
   },
   "resolutions": {
-    "eslint": "8.57.0",
-    "sharp": "0.32.6"
+    "eslint": "8.57.0"
   },
   "scripts": {
     "deploy": "yarn prepare && grunt deploy_production",
@@ -126,5 +125,5 @@
     "test": "yarn prepare && grunt",
     "prepare": "git log -1 --pretty=\"format:a.dropdown-item.nav-link(href='https://github.com/softwerkskammer/Agora/commit/%H', target='_blank')%n i.fab.fa-github.fa-fw%n | &nbsp;Version: %h\" > softwerkskammer/version.pug"
   },
-  "packageManager": "yarn@4.0.2"
+  "packageManager": "yarn@4.2.2"
 }
