--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/luxon3": "6.1.15",
     "@popperjs/core": "2.11.8",
     "CoolBeans": "0.0.9",
+    "adm-zip": "0.5.16",
     "better-sqlite3": "11.0.0",
     "better-sqlite3-session-store": "0.1.0",
     "body-parser": "1.20.3",
@@ -37,6 +38,13 @@
     "feed": "4.2.2",
     "fullcalendar": "6.1.15",
     "glob": "10.4.5",
+    "grunt": "1.6.1",
+    "grunt-cli": "1.5.0",
+    "grunt-contrib-clean": "2.0.1",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-cssmin": "5.0.0",
+    "grunt-contrib-uglify": "5.2.2",
+    "grunt-sass": "3.1.0",
     "guillotine": "1.3.1",
     "i18next": "23.15.2",
     "i18next-fs-backend": "2.3.2",
@@ -65,6 +73,7 @@
     "pug": "3.0.3",
     "qr-image": "3.2.0",
     "ramda": "0.30.1",
+    "sass": "1.79.4",
     "select2": "4.1.0-rc.0",
     "select2-bootstrap-5-theme": "1.3.0",
     "serve-favicon": "2.5.0",
@@ -79,22 +88,14 @@
     "winston": "3.15.0"
   },
   "devDependencies": {
-    "adm-zip": "0.5.16",
     "eslint": "8.57.1",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
-    "grunt": "1.6.1",
-    "grunt-cli": "1.5.0",
-    "grunt-contrib-clean": "2.0.1",
-    "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-cssmin": "5.0.0",
     "grunt-contrib-pug": "3.0.0",
-    "grunt-contrib-uglify": "5.2.2",
     "grunt-eslint": "24.3.0",
     "grunt-karma": "4.0.2",
     "grunt-mocha-cli": "7.0.0",
     "grunt-puglint": "1.0.0",
-    "grunt-sass": "3.1.0",
     "grunt-simple-nyc": "3.0.1",
     "karma": "6.4.4",
     "karma-chrome-launcher": "3.2.0",
@@ -109,12 +110,15 @@
     "prettier": "3.3.3",
     "proxyquire": "2.1.3",
     "puppeteer": "22.15.0",
-    "sass": "1.79.4",
     "sinon": "19.0.2",
     "supertest": "7.0.0"
   },
   "resolutions": {
+    "better-sqlite": "11.0.0",
     "eslint": "8.57.1",
+    "glob": "10.4.5",
+    "grunt-eslint": "24.3.0",
+    "puppeteer": "22.15.0",
     "sharp": "0.32.6"
   },
   "scripts": {
